--- a/index.html
+++ b/index.html
@@ -5,5 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
+  <script type="module" src="./js/test-1.js"></script>
   <body></body>
 </html>
