--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Random movie</title>
   </head>
-  <script type="module" src="./js/test-1.js"></script>
+  <script type="module" src="./js/random-movie.js"></script>
   <body></body>
 </html>
