--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Random movie</title>
   </head>
-  <script type="module" src="./js/random-movie.js"></script>
+  <script type="module" src="./js/main.js"></script>
   <body></body>
 </html>
